# 3Dof-Robot-in-ROS

test4/: .gitignore
test4/src/RoboCon/: CMakeLists.txt  package.xml
test4/src/RoboCon/config/: joint_controllers.yaml  joint_names_urdf7.yaml
test4/src/RoboCon/launch/: gazebo.launch
test4/src/RoboCon/meshes/: base_link.STL  left_gripper.STL  link1.STL  link2.STL  right_gripper.STL  wlb.STL  wlf.STL  wrb.STL  wrf.STL
test4/src/RoboCon/scripts/: robot_joint_teleop.py
test4/src/RoboCon/urdf/: urdf7.csv  urdf7.urdf
test4/src/RoboCon/world/: arena.world  arena2.world  arena3.world  arenawithballs.world
